--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 polybot/.telegramToken
-.env
 shambhaveenewohio.pem
 Untitled.jpg
 sham_cal.pem
 mongo
 polybot/photos/
-18015-MC20BluInfinito-scaled-e1666008987698.jpg
+car.jpg
+output-image.jpg
