--- a/k8s/yolo5.yaml
+++ b/k8s/yolo5.yaml
@@ -14,39 +14,7 @@ spec:
     spec:
       containers:
       - name: my-yolo5-app
-        image: 854171615125.dkr.ecr.us-west-1.amazonaws.com/shambhavee-jenkins:latest
-        ports:
-        - containerPort: 8081
-
-
----
-
-apiVersion: v1
-kind: Service
-metadata:
-  name: my-yolo5-service
-spec:
-  selector:
-    app: my-yolo5-app
-  ports:
-    - port: 8081
-      targetPort: 8081apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: my-yolo5-deployment
-spec:
-  selector:
-    matchLabels:
-      app: my-yolo5-app
-  replicas: 1 # Update the replicas from 2 to 4
-  template:
-    metadata:
-      labels:
-        app: my-yolo5-app
-    spec:
-      containers:
-      - name: my-yolo5-app
-        image: 854171615125.dkr.ecr.us-west-1.amazonaws.com/sahil-jenkins:$BUILD_NUMBER
+        image: 854171615125.dkr.ecr.us-west-1.amazonaws.com/shambhavee-jenkins:$BUILD_NUMBER
         ports:
         - containerPort: 8081
 
